<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetProfileActivity">

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textViewGender"
        app:layout_constraintStart_toEndOf="@+id/textViewGender"
        app:layout_constraintTop_toTopOf="@+id/textViewGender">


        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="87dp"
            android:layout_height="31dp"
            android:text="@string/radioButtonFemale"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroupGender"
            app:layout_constraintStart_toStartOf="@+id/radioGroupGender"
            app:layout_constraintTop_toTopOf="@+id/radioGroupGender" />

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="101dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:text="@string/radioButtonMale"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroupGender"
            app:layout_constraintStart_toEndOf="@+id/radioButtonFemale"
            app:layout_constraintTop_toTopOf="@+id/radioGroupGender" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewWgtLbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/textViewWgtLbs"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/EnterWeightHint"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWgtLbs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewWgtLbs"
        app:layout_constraintTop_toTopOf="@+id/textViewWgtLbs" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/textViewGender"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWgtLbs" />

    <Button
        android:id="@+id/buttonWeightCancel"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/buttonWeightCancel"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGender" />

    <Button
        android:id="@+id/buttonSet"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/buttonSet"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonWeightCancel"
        app:layout_constraintStart_toEndOf="@+id/buttonWeightCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>